package(default_visibility = ["//visibility:public"])

load("@example_crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_test")
load("//tauri:defs.bzl", "tauri_application")

platform(
    name = "macos_arm64",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:macos",
    ],
)

platform(
    name = "macos_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:macos",
    ],
)

filegroup(
    name = "cargo_srcs",
    srcs = [
        "Cargo.lock",
        "Cargo.toml",
        "tauri.conf.json",
        "build.rs",
        "build_contract.rs",
    ] + glob([
        "capabilities/**",
        "icons/**",
        "src/**/*.rs",
    ]),
)

filegroup(
    name = "context_cargo_srcs",
    srcs = [
        "Cargo.lock",
        "Cargo.toml",
        "tauri.conf.json",
    ] + glob([
        "capabilities/**",
        "icons/**",
    ]),
)

filegroup(
    name = "icons",
    srcs = glob(["icons/**"]),
)

filegroup(
    name = "capabilities",
    srcs = glob(["capabilities/**"]),
)

filegroup(
    name = "tauri_build_data",
    srcs = [
        "tauri.conf.json",
        ":capabilities",
        ":icons",
        "//examples/tauri_with_vite:frontend_dist",
    ],
)

tauri_application(
    name = "app_arm64",
    platform = ":macos_arm64",
    target_triple = "aarch64-apple-darwin",
    cargo_srcs = ":cargo_srcs",
    context_cargo_srcs = ":context_cargo_srcs",
    tauri_build_data = ":tauri_build_data",
    frontend_dist = "//examples/tauri_with_vite:frontend_dist",
    aliases = aliases(),
    deps = all_crate_deps(normal = True),
    proc_macro_deps = all_crate_deps(proc_macro = True),
    lib_crate_name = "tauri_with_vite_lib",
    binary_crate_name = "tauri_with_vite",
    crate_features = ["custom-protocol"],
    acl_dep_env_targets = [
        "@example_crates__tauri-2.10.3//:build_script_build",
        "@example_crates__tauri-plugin-opener-2.5.3//:build_script_build",
    ],
    tauri_config = "tauri.conf.json",
    main_binary_name = "tauri-with-vite",
    icons = ["icons/icon.icns"],
    capabilities = [":capabilities/default.json"],
    bundle_id = "com.jeremyhale.tauri-with-vite",
    product_name = "tauri-with-vite",
    version = "0.1.0",
)

tauri_application(
    name = "app_x86_64",
    platform = ":macos_x86_64",
    target_triple = "x86_64-apple-darwin",
    cargo_srcs = ":cargo_srcs",
    context_cargo_srcs = ":context_cargo_srcs",
    tauri_build_data = ":tauri_build_data",
    frontend_dist = "//examples/tauri_with_vite:frontend_dist",
    aliases = aliases(),
    deps = all_crate_deps(normal = True),
    proc_macro_deps = all_crate_deps(proc_macro = True),
    lib_crate_name = "tauri_with_vite_lib",
    binary_crate_name = "tauri_with_vite",
    crate_features = ["custom-protocol"],
    acl_dep_env_targets = [
        "@example_crates__tauri-2.10.3//:build_script_build",
        "@example_crates__tauri-plugin-opener-2.5.3//:build_script_build",
    ],
    tauri_config = "tauri.conf.json",
    main_binary_name = "tauri-with-vite",
    icons = ["icons/icon.icns"],
    capabilities = [":capabilities/default.json"],
    bundle_id = "com.jeremyhale.tauri-with-vite",
    product_name = "tauri-with-vite",
    version = "0.1.0",
)

cargo_build_script(
    name = "build_script",
    srcs = [
        "build.rs",
        "build_contract.rs",
    ],
    crate_root = "build.rs",
    crate_name = "build_script_build",
    edition = "2021",
    pkg_name = "tauri-with-vite",
    version = "0.1.0",
    rundir = "examples/tauri_with_vite/app/src-tauri",
    aliases = aliases(build = True),
    deps = all_crate_deps(build = True),
    link_deps = [
        "@example_crates//:tauri",
        "@example_crates//:tauri-plugin-opener",
    ],
    proc_macro_deps = all_crate_deps(build_proc_macro = True),
    data = [
        ":cargo_srcs",
        ":tauri_build_data",
        ":app_arm64_lib_release_context",
        ":_app_arm64_lib_release_context_acl_prep",
        "//examples/tauri_with_vite:frontend_dist",
        "//examples/tauri_with_vite:embedded_assets_rust",
    ],
    compile_data = [
        ":cargo_srcs",
        ":tauri_build_data",
        ":app_arm64_lib_release_context",
        ":_app_arm64_lib_release_context_acl_prep",
        "//examples/tauri_with_vite:frontend_dist",
        "//examples/tauri_with_vite:embedded_assets_rust",
    ],
    build_script_env = {
        "DEP_TAURI_DEV": "false",
        "RULES_TAURI_BAZEL_ACL_OUT_DIR": "$(location :_app_arm64_lib_release_context_acl_prep)",
        "RULES_TAURI_BAZEL_FULL_CONTEXT": "$(location :app_arm64_lib_release_context)",
    },
)

rust_test(
    name = "build_contract_test",
    srcs = ["build_contract.rs"],
    crate_name = "tauri_with_vite_build_contract_test",
    edition = "2021",
)

alias(
    name = "tauri_with_vite_lib",
    actual = ":app_arm64_lib",
)

alias(
    name = "tauri_with_vite_bin",
    actual = ":app_arm64_bin",
)
