package(default_visibility = ["//visibility:public"])

load("@codegen_crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

filegroup(
    name = "cargo_srcs",
    srcs = [
        "Cargo.lock",
        "Cargo.toml",
        "tauri.conf.json",
        "build.rs",
    ] + glob([
        "capabilities/**",
        "icons/**",
        "src/**/*.rs",
    ]),
)

filegroup(
    name = "icons",
    srcs = glob(["icons/**"]),
)

filegroup(
    name = "capabilities",
    srcs = glob(["capabilities/**"]),
)

filegroup(
    name = "tauri_build_data",
    srcs = [
        "tauri.conf.json",
        ":capabilities",
        ":icons",
        "//test/fixtures/tauri_codegen:dist",
    ],
)

cargo_build_script(
    name = "build_script",
    srcs = ["build.rs"],
    crate_root = "build.rs",
    crate_name = "build_script_build",
    edition = "2021",
    pkg_name = "tauri-codegen-fixture",
    version = "0.1.0",
    rundir = "test/fixtures/tauri_codegen/src-tauri",
    aliases = aliases(build = True),
    deps = all_crate_deps(build = True),
    link_deps = ["@codegen_crates//:tauri"],
    proc_macro_deps = all_crate_deps(build_proc_macro = True),
    data = [
        ":cargo_srcs",
        ":tauri_build_data",
        "//test/fixtures/tauri_codegen:dist",
        "//test/fixtures/tauri_codegen:embedded_assets_compressed_rust",
    ],
    compile_data = [
        ":cargo_srcs",
        ":tauri_build_data",
        "//test/fixtures/tauri_codegen:dist",
        "//test/fixtures/tauri_codegen:embedded_assets_compressed_rust",
    ],
    build_script_env = {
        "RULES_TAURI_BAZEL_EMBEDDED_ASSETS": "$(location //test/fixtures/tauri_codegen:embedded_assets_compressed_rust)",
        "DEP_TAURI_DEV": "false",
        "RULES_TAURI_FRONTEND_DIST": "$(location //test/fixtures/tauri_codegen:dist)",
    },
)

genrule(
    name = "runtime_authority_rust",
    srcs = [":build_script"],
    outs = ["runtime_authority.rs"],
    cmd = """
set -eu
context="$(location :build_script)/tauri-build-context.rs"
python3 - "$$context" "$@" <<'PY'
from pathlib import Path
import re
import sys

text = Path(sys.argv[1]).read_text(encoding="utf-8")
match = re.search(r':: tauri :: runtime_authority ! \\(\\{.*?\\}\\)', text, re.S)
if match is None:
    raise SystemExit("failed to find runtime_authority! macro")
Path(sys.argv[2]).write_text(match.group(0) + "\\n", encoding="utf-8")
PY
""",
)

genrule(
    name = "full_context_rust",
    srcs = [
        "//test/fixtures/tauri_codegen:embedded_assets_compressed_rust",
        ":runtime_authority_rust",
    ],
    tools = ["//tools:tauri_full_context_fixture_exec"],
    outs = ["tauri-build-context.rs"],
    cmd = """
set -eu
$(execpath //tools:tauri_full_context_fixture_exec) \
  --out "$@" \
  --embedded-assets-rust "$(location //test/fixtures/tauri_codegen:embedded_assets_compressed_rust)" \
  --runtime-authority-rust "$(location :runtime_authority_rust)" \
  --product-name "tauri-codegen-fixture" \
  --version "0.1.0" \
  --identifier "com.example.tauri-codegen-fixture"
""",
)

rust_library(
    name = "codegen_probe_lib",
    srcs = ["src/lib.rs"],
    crate_name = "tauri_codegen_fixture_lib",
    edition = "2021",
    aliases = aliases(),
    crate_features = ["custom-protocol"],
    compile_data = [
        ":cargo_srcs",
        ":tauri_build_data",
        "//test/fixtures/tauri_codegen:dist",
    ],
    deps = all_crate_deps(normal = True) + [":build_script"],
    proc_macro_deps = all_crate_deps(proc_macro = True),
)

rust_binary(
    name = "codegen_probe",
    srcs = ["src/main.rs"],
    crate_name = "tauri_codegen_fixture",
    edition = "2021",
    crate_features = ["custom-protocol"],
    deps = [":codegen_probe_lib"],
)
