package(default_visibility = ["//visibility:public"])

load("@codegen_crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")
load("//private:upstream_context_oracle.bzl", "tauri_upstream_context_oracle")

filegroup(
    name = "cargo_srcs",
    srcs = [
        "Cargo.lock",
        "Cargo.toml",
        "tauri.conf.json",
        "build.rs",
        "build_contract.rs",
        "upstream_build.rs",
    ] + glob([
        "capabilities/**",
        "icons/**",
        "src/**/*.rs",
    ]),
)

filegroup(
    name = "icons",
    srcs = glob(["icons/**"]),
)

filegroup(
    name = "capabilities",
    srcs = glob(["capabilities/**"]),
)

filegroup(
    name = "tauri_build_data",
    srcs = [
        "tauri.conf.json",
        ":capabilities",
        ":icons",
        "//test/fixtures/tauri_codegen:dist",
    ],
)

filegroup(
    name = "tauri_dep_env",
    srcs = ["@codegen_crates__tauri-2.10.3//:build_script_build"],
    output_group = "dep_env",
)

cargo_build_script(
    name = "build_script",
    srcs = [
        "build.rs",
        "build_contract.rs",
    ],
    crate_root = "build.rs",
    crate_name = "build_script_build",
    edition = "2021",
    pkg_name = "tauri-codegen-fixture",
    version = "0.1.0",
    rundir = "test/fixtures/tauri_codegen/src-tauri",
    aliases = aliases(build = True),
    deps = all_crate_deps(build = True),
    link_deps = ["@codegen_crates//:tauri"],
    proc_macro_deps = all_crate_deps(build_proc_macro = True),
    data = [
        ":cargo_srcs",
        ":tauri_build_data",
        ":full_context_rust",
        ":upstream_build_script",
        "//test/fixtures/tauri_codegen:dist",
        "//test/fixtures/tauri_codegen:embedded_assets_compressed_rust",
    ],
    compile_data = [
        ":cargo_srcs",
        ":tauri_build_data",
        ":full_context_rust",
        ":upstream_build_script",
        "//test/fixtures/tauri_codegen:dist",
        "//test/fixtures/tauri_codegen:embedded_assets_compressed_rust",
    ],
    build_script_env = {
        "DEP_TAURI_DEV": "false",
        "RULES_TAURI_BAZEL_FULL_CONTEXT": "$(location :full_context_rust)",
        "RULES_TAURI_BAZEL_UPSTREAM_OUT_DIR": "$(location :upstream_build_script)",
    },
)

tauri_upstream_context_oracle(
    upstream_name = "upstream_build_script",
    full_context_name = "full_context_rust",
    cargo_srcs = ":cargo_srcs",
    tauri_build_data = ":tauri_build_data",
    build_script_src = "upstream_build.rs",
    build_contract_src = "build_contract.rs",
    pkg_name = "tauri-codegen-fixture",
    version = "0.1.0",
    rundir = "test/fixtures/tauri_codegen/src-tauri",
    aliases = aliases(build = True),
    build_deps = all_crate_deps(build = True),
    build_proc_macro_deps = all_crate_deps(build_proc_macro = True),
    link_deps = ["@codegen_crates//:tauri"],
    frontend_dist = "//test/fixtures/tauri_codegen:dist",
    embedded_assets_rust = "//test/fixtures/tauri_codegen:embedded_assets_compressed_rust",
    acl_dep_env_targets = [
        "@codegen_crates__tauri-2.10.3//:build_script_build",
    ],
)

rust_library(
    name = "codegen_probe_lib",
    srcs = ["src/lib.rs"],
    crate_name = "tauri_codegen_fixture_lib",
    edition = "2021",
    aliases = aliases(),
    crate_features = ["custom-protocol"],
    compile_data = [
        ":cargo_srcs",
        ":tauri_build_data",
        "//test/fixtures/tauri_codegen:dist",
    ],
    deps = all_crate_deps(normal = True) + [":build_script"],
    proc_macro_deps = all_crate_deps(proc_macro = True),
)

rust_binary(
    name = "codegen_probe",
    srcs = ["src/main.rs"],
    crate_name = "tauri_codegen_fixture",
    edition = "2021",
    crate_features = ["custom-protocol"],
    deps = [":codegen_probe_lib"],
)

rust_test(
    name = "build_contract_test",
    srcs = ["build_contract.rs"],
    crate_name = "tauri_codegen_build_contract_test",
    edition = "2021",
)
