[package]
name = "tauri-codegen-fixture"
version = "0.1.0"
edition = "2021"

[lib]
name = "tauri_codegen_fixture_lib"
crate-type = ["rlib"]

[build-dependencies]
serde_json = "1"
tauri-build = { version = "2", features = ["codegen"] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
