[package]
name = "tauri-codegen-fixture"
version = "0.1.0"
edition = "2021"

[lib]
name = "tauri_codegen_fixture_lib"
crate-type = ["rlib"]

[build-dependencies]
proc-macro2 = "1"
quote = "1"
serde_json = "1"
syn = { version = "2", features = ["full", "parsing", "visit-mut"] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
